added meta tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html> <!-- the keys ! + tab generate the following -->
-<html lang="en">
+<header1 lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta auther="Thomas Federico">
+    <meta description="">
+    <title>Unit Outline - COS10026 Web Technology Project</title>
 </head>
 <body>
     
