--- a/index.html
+++ b/index.html
@@ -27,5 +27,46 @@
 
     <img src="swin_logo.png" alt="Swinburne Logo"> <!-- Assistance from https://www.w3schools.com/html/html_images.asp -->
 
+<!-- Line goes here-->
+
+<h3>Aims</h3>
+
+<p>
+    This project-based unit focuses on developing your skills to build web applications using web technologies. You'll work individually and in teams to tackle real-world web development challenges, building proficiency in selecting and applying suitable tools and techniques. The unit also covers essential aspects of security, ethics, accessibility, and professional communication within web development. Guidance from an academic facilitator will support you in mastering both technical skills and collaborative project management techniques to achieve these objectives. 
+</p>
+
+<h3>Unit Learning Outcomes</h3>
+
+<p>
+    Students who successfully complete this unit can:
+    <ol>
+        <li>ULO1 Identify web technologies' core components and functions to establish a foundational understanding.</li>
+        <li>ULO2 Implement a project plan using project management strategies to organise, prioritise, and monitor tasks effectively in a web development context.</li>
+        <li>ULO3 Apply team frameworks, communicate and work effectively within teams using suitable verbal and technological methods.</li>
+        <li>ULO4 Utilise database query techniques to create, retrieve, update, and delete data according to specific project needs.</li>
+        <li>ULO5 Demonstrate the use of web development technologies to develop functional web applications, incorporating professional ethics, project management skills, and security practices.</li>
+        <li>ULO6 Explain fundamental security principles in web development and demonstrate their implementation in basic applications.</li>
+        <li>ULO7 Assess ethical considerations and security practices in web development, including accessibility and user privacy.</li>
+    </ol>
+</p>
+
+<h3>Content</h3>
+
+<p>
+    <ul>
+        <li>Core Front-End and Back-End Development</li>
+        <li>Project-Based Learning and Version Control</li>
+        <li>Project Planning and Project Management</li>
+        <li> Web Security, Ethics, and Accessibility</li>
+        <li>Database Query Techniques</li>
+        <li>Professional Communication and Presentation</li>
+        <li>Teamwork Framework</li>
+    </ul>
+</p>
+
+<h3>Asessments Overview</h3>
+
+
+
 </body>
 </html>
