Begun work on Table

--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
 
 <h3>Asessments Overview</h3>
 
+<table>
+
+<tr> <!-- Row 1 -->
+    <th>Tasks and Details</th>
+    <th>Individual or Group</th>
+    <th>Weighting</th>
+    <th>Assessment Due Date</th>
+</tr>
+<tr> <!-- Row 2 -->
+    <td>
+        1. Lab Exersises (Laboratory Practicals)
+    </td>
+</tr>
+<tr> <!-- Row 3 -->
+    <td>
+        2. Applied Web Project Part 1 of 2
+    </td>
+</tr>
+<tr> <!-- Row 4 -->
+    <td>
+        3. Applied Web Project Part 2 of 2
+    </td>
+</tr>
+
+</table>
+
+
+
 
 
 </body>
