--- a/index.html
+++ b/index.html
@@ -78,16 +78,25 @@
     <td>
         1. Lab Exersises (Laboratory Practicals)
     </td>
+    <td>Individual</td>
+    <td>15%</td>
+    <td>Weekly (Weeks 1 to 5, and 8 to 10) </td>
 </tr>
 <tr> <!-- Row 3 -->
     <td>
         2. Applied Web Project Part 1 of 2
     </td>
+    <td>Individual & Group</td>
+    <td>40%</td>
+    <td>Monday of Week 7</td>
 </tr>
 <tr> <!-- Row 4 -->
     <td>
         3. Applied Web Project Part 2 of 2
     </td>
+    <td>Individual & Group</td>
+    <td>45%</td>
+    <td>Monday of Week 12</td>
 </tr>
 
 </table>
