--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <img src="swin_logo.png" alt="Swinburne Logo"> <!-- Assistance from https://www.w3schools.com/html/html_images.asp -->
 
-<!-- Line goes here-->
+<hr>
 
 <h3>Aims</h3>
 
@@ -98,12 +98,12 @@
     <td>45%</td>
     <td>Monday of Week 12</td>
 </tr>
-
 </table>
-
-
-
-
-
 </body>
+
+<footer>
+    <hr>
+    <body>© Swinburne University of Technology &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="thomasf201006@gmail.com">thomasf201006@gmail.com</a></body>
+</footer>
+
 </html>
