Fixed Meta Tags

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html> <!-- the keys ! + tab generate the following -->
-<header1 lang="en">
-
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Thomas Federicio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta auther="Thomas Federico">
-    <meta description="">
     <title>Unit Outline - COS10026 Web Technology Project</title>
 </head>
 
@@ -39,6 +39,7 @@
 
 <p>
     Students who successfully complete this unit can:
+</p>
     <ol>
         <li>ULO1 Identify web technologies' core components and functions to establish a foundational understanding.</li>
         <li>ULO2 Implement a project plan using project management strategies to organise, prioritise, and monitor tasks effectively in a web development context.</li>
@@ -48,11 +49,9 @@
         <li>ULO6 Explain fundamental security principles in web development and demonstrate their implementation in basic applications.</li>
         <li>ULO7 Assess ethical considerations and security practices in web development, including accessibility and user privacy.</li>
     </ol>
-</p>
 
 <h3>Content</h3>
 
-<p>
     <ul>
         <li>Core Front-End and Back-End Development</li>
         <li>Project-Based Learning and Version Control</li>
@@ -62,7 +61,6 @@
         <li>Professional Communication and Presentation</li>
         <li>Teamwork Framework</li>
     </ul>
-</p>
 
 <h3>Asessments Overview</h3>
 
@@ -101,9 +99,9 @@
 </table>
 </body>
 
-<footer>
-    <hr>
-    <body>© Swinburne University of Technology &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="thomasf201006@gmail.com">thomasf201006@gmail.com</a></body>
-</footer>
+    <footer>
+        <hr>
+        <body>© Swinburne University of Technology &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="thomasf201006@gmail.com">thomasf201006@gmail.com</a></body>
+    </footer>
 
 </html>
