--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 </table>
 </body>
 
-    <footer>
-        <hr>
-        <body>© Swinburne University of Technology &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="thomasf201006@gmail.com">thomasf201006@gmail.com</a></body>
-    </footer>
+<footer>
+    <hr>
+    <p>© Swinburne University of Technology &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="thomasf201006@gmail.com">thomasf201006@gmail.com</a></p>
+</footer>
 
 </html>
